KeyMapping is immutable
This core concept should be immutable and protect its byte[] from
modification. This allows us to reason about its lifecycle.

JIRA: BGPCEP-983
Change-Id: I63c6a377ff1b62f058fd2bfb4c7e0ff07f8a2516
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>